--- a/TestForIaUa/TestForIaUa.csproj
+++ b/TestForIaUa/TestForIaUa.csproj
@@ -64,6 +64,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="AddEquipmentWindow.xaml.cs">
+      <DependentUpon>AddEquipmentWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="AddManufacturerToDBWindow.xaml.cs">
       <DependentUpon>AddManufacturerToDBWindow.xaml</DependentUpon>
     </Compile>
@@ -75,6 +78,13 @@
     </Compile>
     <Compile Include="entyties.cs" />
     <Compile Include="OfficeContext.cs" />
+    <Compile Include="AddRepairWindow.xaml.cs">
+      <DependentUpon>AddRepairWindow.xaml</DependentUpon>
+    </Compile>
+    <Page Include="AddEquipmentWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="AddManufacturerToDBWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -99,6 +109,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="AddRepairWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
