--- a/TestForIaUa/TestForIaUa.csproj
+++ b/TestForIaUa/TestForIaUa.csproj
@@ -35,6 +35,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CsvHelper">
+      <HintPath>..\..\Parsers\matahari_parser\packages\CsvHelper.12.2.0\lib\net47\CsvHelper.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
       <Private>True</Private>
@@ -78,6 +81,9 @@
     </Compile>
     <Compile Include="Delegates.cs" />
     <Compile Include="entyties.cs" />
+    <Compile Include="EquipmentRedactorWindow.xaml.cs">
+      <DependentUpon>EquipmentRedactorWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="FilterByManufacturerWindow.xaml.cs">
       <DependentUpon>FilterByManufacturerWindow.xaml</DependentUpon>
     </Compile>
@@ -102,6 +108,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="AddTypeToDBWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="EquipmentRedactorWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
