Закинул всю логику в контроллер, добавил возможность добавлния новой модели из окна добавления оборудования, а аткже добавление нового типа и производителя из окна добавления модели

--- a/TestForIaUa/TestForIaUa.csproj
+++ b/TestForIaUa/TestForIaUa.csproj
@@ -80,6 +80,7 @@
     <Compile Include="AddTypeToDBWindow.xaml.cs">
       <DependentUpon>AddTypeToDBWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controller.cs" />
     <Compile Include="Delegates.cs" />
     <Compile Include="entyties.cs" />
     <Compile Include="EquipmentRedactorWindow.xaml.cs">
